# dsrfa-backend

./: .gitignore  App.tsx  README.md  backend-README.md  config.py  index.html  init_db.py  main.py  package.json  postcss.config.js  pyproject.toml  requirements.txt  run.py  start.sh  tailwind.config.js  tsconfig.json  vite.config.ts
components/: AccountingPage.tsx  AddSponsorPage.tsx  AdminDashboard.tsx  AdminManagementPage.tsx  ClubDetailsPage.tsx  ClubPage.tsx  ClubRegistrationPage.tsx  ClunsPage.tsx  Dashboard.tsx  EditSponsorPage.tsx  EventDetailsPage.tsx  EventManagementPage.tsx  EventRegistrationPage.tsx  EventsPage.tsx  GalleryPage.tsx  Header.tsx  LandingPage.tsx  LoginPage.tsx  MemberProfilePage.tsx  MembersPage.tsx  ProfilePage.tsx  RegisterPage.tsx  RenewalPage.tsx  SponsorsPage.tsx  VersionHistoryPage.tsx
components/ui/: button.tsx  checkbox.tsx  collapsible.tsx  dialog.tsx  horizontal-line.tsx  input.tsx  select.tsx  textarea.tsx
src/: main.tsx
styles/: globals.css
